# light_board

./: .gitignore  CLAUDE.md  _victory_analysis.py  analysis.py  colors.py  config.py  control.py  effects.py  home_assistant.py  main.py  prefs.py  pyproject.toml  runner.py  signals.py  spotify.py
tests/: test_colors.py  test_config.py  test_effects.py  test_home_assistant.py  test_runner.py  test_signals.py  trace.py
